// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkDown render html without escaing it 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <p
      class="emotion-2 emotion-1"
    >
      <span
        class="emotion-2 emotion-1"
      >
        Hello
      </span>
      <br />
      <span
        class="emotion-2 emotion-1"
      >
        World
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render paragraph inline 1`] = `
<DocumentFragment>
  .emotion-0>p {
  display: inline;
}

<span
    class="emotion-0 emotion-1"
  >
    <p
      class="emotion-2 emotion-1"
    >
      <span
        class="emotion-2 emotion-1"
      >
        I am a paragraph.
      </span>
    </p>
    <p
      class="emotion-2 emotion-1"
    >
      <span
        class="emotion-2 emotion-1"
      >
        And a second one
      </span>
    </p>
  </span>
</DocumentFragment>
`;

exports[`MarkDown render simple string 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

.emotion-3.emotion-3 {
  margin-top: 0;
}

.emotion-26 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #3f6ed8;
}

.emotion-26:hover,
.emotion-26:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-26:hover,
.emotion-26:focus {
  color: #1e4293;
}

.emotion-22 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #4a4f62;
  background-color: #f6f5f7;
  padding: 8px;
}

<div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3 emotion-1"
    >
      <span
        class="emotion-5 emotion-1"
      >
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span
        class="emotion-5 emotion-1"
      >
        I am a Markdown H2
      </span>
    </h2>
    <p
      class="emotion-5 emotion-1"
    >
      <span
        class="emotion-5 emotion-1"
      >
        I am a simple markdown with
      </span>
      <strong>
        <span
          class="emotion-5 emotion-1"
        >
          strong
        </span>
      </strong>
      <span
        class="emotion-5 emotion-1"
      >

      </span>
      <em>
        <span
          class="emotion-5 emotion-1"
        >
          italic
        </span>
      </em>
      <span
        class="emotion-5 emotion-1"
      >
         content
      </span>
    </p>
    <p
      class="emotion-5 emotion-1"
    >
      <span
        class="emotion-5 emotion-1"
      >
        You can find the complete reference
      </span>
      <a
        class="emotion-25 emotion-26 emotion-1"
        href="https://commonmark.org/help/"
      >
        <span
          class="emotion-5 emotion-1"
        >
          here
        </span>
      </a>
    </p>
    <p
      class="emotion-5 emotion-1"
    >
      <span
        class="emotion-5 emotion-1"
      >
        Invalid
      </span>
    </p>
    <p
      class="emotion-5 emotion-1"
    >
      <span
        class="emotion-5 emotion-1"
      >
        I can also render code
      </span>
    </p>
    <p
      class="emotion-5 emotion-1"
    >
      <code
        class="emotion-1 emotion-22"
      >
        const example = 1 // Inline code
      </code>
    </p>
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render simple string with target blank 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

.emotion-3.emotion-3 {
  margin-top: 0;
}

.emotion-26 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #3f6ed8;
}

.emotion-26:hover,
.emotion-26:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-26:hover,
.emotion-26:focus {
  color: #1e4293;
}

.emotion-32 {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  padding-left: 2px;
  opacity: 0.5;
}

.emotion-32.emotion-32 {
  vertical-align: top;
}

.emotion-25 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #4a4f62;
  background-color: #f6f5f7;
  padding: 8px;
}

<div
    class="emotion-0 emotion-1"
  >
    <h2
      class="emotion-2 emotion-3 emotion-1"
    >
      <span
        class="emotion-5 emotion-1"
      >
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span
        class="emotion-5 emotion-1"
      >
        I am a Markdown H2
      </span>
    </h2>
    <p
      class="emotion-5 emotion-1"
    >
      <span
        class="emotion-5 emotion-1"
      >
        I am a simple markdown with
      </span>
      <strong>
        <span
          class="emotion-5 emotion-1"
        >
          strong
        </span>
      </strong>
      <span
        class="emotion-5 emotion-1"
      >

      </span>
      <em>
        <span
          class="emotion-5 emotion-1"
        >
          italic
        </span>
      </em>
      <span
        class="emotion-5 emotion-1"
      >
         content
      </span>
    </p>
    <p
      class="emotion-5 emotion-1"
    >
      <span
        class="emotion-5 emotion-1"
      >
        You can find the complete reference
      </span>
      <a
        class="emotion-25 emotion-26 emotion-1"
        href="https://commonmark.org/help/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="emotion-5 emotion-1"
        >
          here
        </span>
        <svg
          class="emotion-30 emotion-31 emotion-32 emotion-1"
          viewBox="0 0 24 24"
        >
          <path
            d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
          />
        </svg>
      </a>
    </p>
    <p
      class="emotion-5 emotion-1"
    >
      <span
        class="emotion-5 emotion-1"
      >
        Invalid
      </span>
    </p>
    <p
      class="emotion-5 emotion-1"
    >
      <span
        class="emotion-5 emotion-1"
      >
        I can also render code
      </span>
    </p>
    <p
      class="emotion-5 emotion-1"
    >
      <code
        class="emotion-1 emotion-25"
      >
        const example = 1 // Inline code
      </code>
    </p>
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;
